; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_am_map.c_AM_changeWindowScale.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_am_map.c_AM_changeWindowScale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@scale_mtof = common dso_local global i64 0, align 8
@mtof_zoommul = common dso_local global i32 0, align 4
@FRACUNIT = common dso_local global i32 0, align 4
@scale_ftom = common dso_local global i32 0, align 4
@min_scale_mtof = common dso_local global i64 0, align 8
@max_scale_mtof = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AM_changeWindowScale() #0 {
  %1 = load i64, i64* @scale_mtof, align 8
  %2 = load i32, i32* @mtof_zoommul, align 4
  %3 = call i64 @FixedMul(i64 %1, i32 %2)
  store i64 %3, i64* @scale_mtof, align 8
  %4 = load i32, i32* @FRACUNIT, align 4
  %5 = load i64, i64* @scale_mtof, align 8
  %6 = call i32 @FixedDiv(i32 %4, i64 %5)
  store i32 %6, i32* @scale_ftom, align 4
  %7 = load i64, i64* @scale_mtof, align 8
  %8 = load i64, i64* @min_scale_mtof, align 8
  %9 = icmp slt i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = call i32 (...) @AM_minOutWindowScale()
  br label %21

12:                                               ; preds = %0
  %13 = load i64, i64* @scale_mtof, align 8
  %14 = load i64, i64* @max_scale_mtof, align 8
  %15 = icmp sgt i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = call i32 (...) @AM_maxOutWindowScale()
  br label %20

18:                                               ; preds = %12
  %19 = call i32 (...) @AM_activateNewScale()
  br label %20

20:                                               ; preds = %18, %16
  br label %21

21:                                               ; preds = %20, %10
  ret void
}

declare dso_local i64 @FixedMul(i64, i32) #1

declare dso_local i32 @FixedDiv(i32, i64) #1

declare dso_local i32 @AM_minOutWindowScale(...) #1

declare dso_local i32 @AM_maxOutWindowScale(...) #1

declare dso_local i32 @AM_activateNewScale(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
